// Protocol Buffer version
syntax = "proto3";

// Namespace declaration for C# compiler, where service code will be generated
option csharp_namespace = "Example.Grpc.Service.Services";

// Service definition with operations, parameters and returned types
service Ordering {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
	rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
}

// Operation types below
message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {
    string orderId = 1;
}

message GetOrderByIdRequest {
    string orderId = 1;
}

message GetOrderByIdResponse {
	Order order = 1;
}

message Order {
	string id = 1;
	string customerName = 2;
	double value = 3;
	repeated OrderItem items = 4; // repeated keyword declares collections
}

message OrderItem {
	string id = 1;
	string name = 2;
}